--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-include": "^2.1.0",
     "gulp-notify": "^2.2.0",
+    "gulp-nunjucks-render": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
