--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.0.0",
+    "gulp-file": "^0.2.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-notify": "^2.2.0",
     "gulp-nunjucks-render": "^1.0.0",
