--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cssnano": "^4.1.10",
     "gh-pages": "^3.1.0",
     "parcel-plugin-clean-dist": "0.0.6",
+    "parcel-plugin-static-files-copy": "^2.5.0",
     "sass": "^1.29.0"
   }
 }
