--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
     "prettier": "2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "react-three-fiber": "^5.3.19",
+    "styled-components": "^5.2.1",
     "three": "^0.126.1",
     "typescript": "^4.1.2"
   },
