--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/styled-components": "^5.1.9",
     "drei": "^2.2.21",
     "editly": "^0.11.1",
+    "gh-pages": "^3.1.0",
     "prettier": "2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,6 +23,7 @@
     "start": "react-scripts start",
     "video": "node showreel.js",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
