--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.2",
     "react-three-fiber": "^5.3.19",
     "styled-components": "^5.2.1",
     "three": "^0.124.0",
